--- a/templates/question.html
+++ b/templates/question.html
@@ -16,7 +16,7 @@
                     <input  type="submit" value="&#8593" name="vote_up">
                 </form>
             <p id="info">
-                Asked {{ question.submission_time }}
+                Asked {{ question.submission_time }} ago
                 <span class="tab"></span>
                 Viewed {{ question.view_number }}
                 <span class="tab"></span>
