'search question' done

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,13 @@
             </select>
             <input type="submit" value="Sort" name="sort">
         </form><br><br>
+        <div>
+            <form action="/search?" method="post">
+                <label for="search-question-input">Search question:</label>
+                <input id="search-question-input" type="search" name="q" width="100px">
+                <button type="submit">Search</button>
+            </form>
+        </div><br>
         <table>
             <tr>
                 <td><b>Title</b></td>
