'Display lastest questions' done. Sort questions need modifying

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,10 @@
                 <td>{{question.vote_number}}</td>
             </tr>
             {% endfor %}
-        </table>
+        </table><br>
+        <div>
+            <a href="/list">All questions</a>
+        </div>
         <footer>
             <br>
             <p>© 2022 Marcin, Marcin, Basia & Tomek</p>
