--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <input type="submit" value="Sort" name="sort">
         </form><br><br>
         <div>
-            <form action="/search?" method="post">
+            <form action="/search">
                 <label for="search-question-input">Search question:</label>
                 <input id="search-question-input" type="search" name="q" width="100px">
                 <button type="submit">Search</button>
