--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <button type="submit">Add new question</button>
             <span style="margin-left: 50px"></span>
         </form>
-        <form action="/" method="post" style="display: inline-block">
+        <form action="{{ link }}" method="post" style="display: inline-block">
             <label for="sort_by">Sort by:</label>
             <select name="sort_by" id="sort_by">
               <option value="title" {% if sort == "title" %} selected {% endif %}>Title</option>
