'Add new tag' in progress

--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -8,4 +8,5 @@
         <input type="text" name="title" required>
     </label><br><br>
 {% endblock %}
+{% block add_file %}<input type="file" name="file" id="file">{% endblock %}
 {% block button %}{{ title }}{% endblock %}
