--- a/templates/edit_answer.html
+++ b/templates/edit_answer.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block action %}/answer/{{ answer.id }}/edit{% endblock %}
 {% block message %}{{ answer.message }}{% endblock %}
+{% block add_file %}<input type="file" name="file" id="file">{% endblock %}
 {% block button %}{{ title }}{% endblock %}
