--- a/templates/edit_question.html
+++ b/templates/edit_question.html
@@ -9,4 +9,5 @@
     </label><br><br>
 {% endblock %}
 {% block message %}{{ question.message }}{% endblock %}
+{% block add_file %}<input type="file" name="file" id="file">{% endblock %}
 {% block button %}{{ title }}{% endblock %}
