'Add new tag' working

--- a/templates/add_tag.html
+++ b/templates/add_tag.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block header %}{{ title }}{% endblock %}
-{% block action %}/question/{{ question.id }}/new-tag{% endblock %}
+{% block action %}/question/{{ question_id }}/new-tag{% endblock %}
 {% block button %}{{ title }}{% endblock %}
