--- a/templates/question.html
+++ b/templates/question.html
@@ -49,7 +49,7 @@
                     <tr style="font-size: 13px">
                         <td>Commented: {{ comment.submission_time }} Edited {{ comment.edited_count }} times</td>
                         <td>
-                            <form action="/comments/{{ comment.id }}/delete" method="post">
+                            <form action="/comments/{{ comment.id }}/delete" method="post" onsubmit="return confirm('Are you sure you wish to delete?')">
                                 <button type="submit">Delete</button>
                             </form>
                         </td>
