--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
         </div>
         <footer>
             <br>
-            <p>© 2022 Marcin, Marcin, Basia & Tomek</p>
+            <p>© 2022 Marcin, Marcin & Tomek</p>
         </footer>
     </body>
 </html>
