'Add new tag' now displayed tags

--- a/templates/add_answer.html
+++ b/templates/add_answer.html
@@ -2,5 +2,6 @@
 {% block title %}{{ title }}{% endblock %}
 {% block header %}{{ title }}{% endblock %}
 {% block action %}/question/{{ question_id }}/new-answer{% endblock %}
+{% block message %}Message:{% endblock %}
 {% block add_file %}<input type="file" name="file" id="file">{% endblock %}
 {% block button %}{{ title }}{% endblock %}
