--- a/templates/add_comment.html
+++ b/templates/add_comment.html
@@ -2,4 +2,5 @@
 {% block title %}{{ title }}{% endblock %}
 {% block header %}{{ title }}{% endblock %}
 {% block action %}/question/{{question_id}}/new-comment{% endblock %}
+{% block message %}Message:{% endblock %}
 {% block button %}{{ title }}{% endblock %}
