--- a/templates/add_tag.html
+++ b/templates/add_tag.html
@@ -2,4 +2,5 @@
 {% block title %}{{ title }}{% endblock %}
 {% block header %}{{ title }}{% endblock %}
 {% block action %}/question/{{ question_id }}/new-tag{% endblock %}
+{% block message %}Tag name:{% endblock %}
 {% block button %}{{ title }}{% endblock %}
