--- a/templates/question.html
+++ b/templates/question.html
@@ -104,12 +104,12 @@
                             </form>
                         </td>
                         <td>
-                            <form action="/answer/{{ answer.id }}/edit" method="get">
+                            <form action="/answer/{{ answer.id }}/{{ question.id }}/edit" method="get">
                                 <button type="submit">Edit</button>
                             </form>
                         </td>
                         <td>
-                            <form action="/answer/{{ answer.id }}/delete" method="post">
+                            <form action="/answer/{{ answer.id }}/{{ question.id }}/delete" method="post">
                                 <button type="submit"><img src="/static/trash-bin.png" alt="ask mate logo" width="10"></button>
                             </form>
                         </td>
